Screen1 UI Initial Design

--- a/FootballForYou/Info.plist
+++ b/FootballForYou/Info.plist
@@ -37,6 +37,7 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>Ristella.ttf</string>
+		<string>Richardson Brand United.otf</string>
 	</array>
 </dict>
 </plist>
